log
Wed, Mar 19, 2025  8:46:11 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:05:48 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: unused variable 'elemento' [-Werror=unused-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6a56891
